# simplify_vslam

./: CMakeLists.txt  README.md  slam.cpp  slam.h
cmake_modules/: FindG2O.cmake
